# termnautica

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  dev.py  pyproject.toml  speach.txt
assets/sprites/modules/: hallway.txt
python/animations/kelp/: 2.txt  3
python/rust/: __init__.py  render.cp313-win_amd64.pyd
python/sprites/lifepod/: inside.txt  ladder.txt
python/subnautica/: __init__.py  __main__.py  birds.py  buildings.py  env.py  fabrication.py  fish.py  interactable.py  item.py  kelp.py  ocean.py  ores.py  particles.py  player.py  props.py  recipe.py  spawners.py  tags.py  ui.py  utils.py
python/subnautica/buildings/: airlock.py  basic_fabricator.py  grill.py  lifepod.py  smelter.py
python/termautica/: __init__.py  __main__.py  birds.py  fish.py  ocean.py  player.py
python/termautica/buildings/: airlock.py  basic_fabricator.py  smelter.py
python/termnautica/: __init__.py  fabrication.py  fish.py  gear_types.py  item.py  ocean.py  ores.py  particles.py  player.py  projectiles.py  props.py  rust_screen.py  settings.py  spawners.py  termnautica.cp313-win_amd64.pyd  ui.py
python/termnautica/buildings/: assembler.py  basic_fabricator.py  fabricator.py  grill.py  hallway.py  lifepod.py  smelter.py
src/: lib.rs
src/termnautica/: __init__.py  __main__.py  birds.py  fabrication.py  fish.py  gear_types.py  input_handler.py  item.py  ocean.py  ores.py  particles.py  player.py  projectiles.py  props.py  settings.py  spawners.py  split_screen.py  ui.py
src/termnautica/buildings/: airlock.py  assembler.py  fabricator.py  grill.py  hallway.py  (+4 more)
(+17 files in other folders)
