[project]
name = "termnautica"
version = "0.1.0"
description = "Underwater game made using `charz`"
authors = [
    { name = "Havsalt", email = "77575424+Havsalt@users.noreply.github.com" }
]
dependencies = [
    "charz[all]==0.0.36",
    "pygame~=2.6",
]
readme = "README.md"
requires-python = ">= 3.13"
license = { text = "MIT" }

[project.scripts]
# TODO: Change main script to `termnautica`
main = "subnautica:main"

[build-system]
requires = ["maturin~=1.0"]
build-backend = "maturin"

[tool.rye]
managed = true
dev-dependencies = []

[tool.maturin]
python-source = "python"
module-name = "rust.render"
features = ["pyo3/extension-module"]
